--- a/muikku/src/main/webapp/resources/theme-muikku/sass/_workspaces-materials-defaults.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/_workspaces-materials-defaults.scss
@@ -568,6 +568,13 @@ body.workspace-materials-management #contentWorkspaceMaterialsManagement {
       .muikku-connect-field-counterpart.muikku-connect-field-wrong-answer, 
       .muikku-connect-field-term.muikku-connect-field-wrong-answer {
         background:#f64e4e;
+        
+        &.muikku-connect-field-term-selected {
+          background:#3dc7ff;
+          color:#fff;
+          font-weight:400;
+        }
+        
       }
       
       /* Connect field's correct answer's styling is required here as we mark 
